Fix: Filter textbox did overlap

--- a/src/sidebar.css
+++ b/src/sidebar.css
@@ -68,6 +68,7 @@ li.active > label {
 #filter {
   width: 100%;
   margin: 5px 0;
+  box-sizing: border-box;
 }
 
 #content {
